# cookiecutter-pytorch-lightning

./: README.md  cookiecutter.json
rf/experiments/mnist/: main.py
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/experiments/mnist/: config.py  main.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  denoising_diffusion.py  flow_matching.py  parameterization.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/nn/: __init__.py  diffusion_transformer.py
